# raytracer-vectorization-example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  renderer.h  renderer.inl
common/: image.cpp  model.cpp  model.h  pixel_format.cpp  png_image.cpp  sg.h  timer.h
